--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,28 @@
     <title>RailsSimpleAirbnb</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <script src="https://kit.fontawesome.com/8631d0c616.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light d-flex">
+        <a class="navbar-brand" href="/flats">Simple airbnb</a>
+      <div class="d-flex">
+        <%= form_tag(flats_path, method: :get) do %>
+          <%= text_field_tag(:search, params[:search]) %>
+          <%= submit_tag ("Search"), class: "btn btn-primary" %>
+        <% end %>
+        <%= link_to "Add new flat", new_flat_path(@flat), class: "btn btn-outline-primary"%>
+      </div>
+    </nav>
     <%= yield %>
+    <footer class="page-footer font-small blue">
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://mdbootstrap.com/"> Simplearibnb.com</a>
+      </div>
+    </footer>
   </body>
 </html>
